--- a/src/app/components/games/games.component.html
+++ b/src/app/components/games/games.component.html
@@ -1,2 +1,5 @@
-<h1>Games</h1>
-<app-game *ngFor="let game of games" [game]="game"> </app-game>
+<div class="games-container">
+  <div class="grid-container">
+    <app-game *ngFor="let game of games" [game]="game"> </app-game>
+  </div>
+</div>
