--- a/src/styles.scss
+++ b/src/styles.scss
@@ -30,3 +30,6 @@ a {
     background: #666;
   }
 }
+
+html, body { height: 100%; }
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
