--- a/src/styles.scss
+++ b/src/styles.scss
@@ -5,11 +5,6 @@
   padding: 0;
 }
 
-body {
-  font-family: "Open Sans", sans-serif;
-  line-height: 1.4;
-}
-
 a {
   color: #333;
   text-decoration: none;
@@ -31,5 +26,11 @@ a {
   }
 }
 
-html, body { height: 100%; }
-body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+html,
+body {
+  height: 100%;
+}
+body {
+  margin: 0;
+  font-family: Roboto, "Helvetica Neue", sans-serif;
+}
