add create listing to main component

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,7 @@
-<app-games></app-games>
+<app-header></app-header>
+<main>
+  <app-listing-create
+    (listingCreated)="onListingAdded($event)"
+  ></app-listing-create>
+  <app-games></app-games>
+</main>
