--- a/src/app/components/containers/games-container/games-container.component.scss
+++ b/src/app/components/containers/games-container/games-container.component.scss
@@ -5,13 +5,25 @@
 .grid-container {
   margin: 0 auto;
   display: grid;
-  grid-template-columns: repeat(5, 1fr);
-  grid-auto-rows: 1fr;
   grid-gap: 1em;
-  @media screen and (max-width: 500px) {
+  @media (min-width: 100px) and (max-width: 500px) {
+    grid-template-columns: repeat(1, 1fr);
+  }
+  @media (min-width: 501px) {
     grid-template-columns: repeat(3, 1fr);
   }
-  @media screen and (max-width: 760px) {
-    grid-template-columns: repeat(2, 1fr);
+  @media (min-width: 1200px) {
+    grid-template-columns: repeat(5, 1fr);
   }
+  @media (min-width: 2000px) {
+    grid-template-columns: repeat(7, 1fr);
+  }
+  @media (min-width: 2200px) {
+    grid-template-columns: repeat(8, 1fr);
+  }
+}
+
+.info-text {
+  text-align: center;
+  color: antiquewhite;
 }
