remove event bindings

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,5 @@
 <app-header></app-header>
 <main>
-  <app-listing-create
-    (listingCreated)="onListingAdded($event)"
-  ></app-listing-create>
+  <app-listing-create></app-listing-create>
   <app-games></app-games>
 </main>
