--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,4 @@
 <app-header></app-header>
 <main>
-  <app-listing-create></app-listing-create>
-  <app-games></app-games>
+  <router-outlet></router-outlet>
 </main>
