add links to header

--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,1 +1,8 @@
-<mat-toolbar color="primary">Listings</mat-toolbar>
+<mat-toolbar color="primary">
+  <span routerLink="/"> Listings </span>
+  <ul>
+    <li>
+      <a routerLink="/listings">Create a Listing!</a>
+    </li>
+  </ul>
+</mat-toolbar>
