add game show component

--- a/src/app/components/cards/game-card/game-card.component.html
+++ b/src/app/components/cards/game-card/game-card.component.html
@@ -1,6 +1,6 @@
 <div>
   <div class="grid-container">
-    <a class="game-link" href="">
+    <a routerLink="/games/game.id" class="game-link" href="">
       <div class="game-card">
         <img src="{{ game.coverImage }}" alt="" class="cover-image" />
         <div class="game-info">
