style header component

--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,8 +1,8 @@
-<mat-toolbar color="primary">
-  <span routerLink="/"> Listings </span>
-  <ul>
-    <li>
-      <a routerLink="/listings">Create a Listing!</a>
-    </li>
-  </ul>
+<mat-toolbar>
+  <div class="content">
+    <a routerLink="/"> Listings</a>
+    <a mat-button routerLink="/listings" routerLinkActive="mat-accent"
+      >Create a Listing!</a
+    >
+  </div>
 </mat-toolbar>
