--- a/src/app/components/header/header.component.scss
+++ b/src/app/components/header/header.component.scss
@@ -1,3 +1,15 @@
-* {
-  color: #858585;
+mat-toolbar {
+  background-color: #1d1d1d;
+  color: #bb86fc;
+}
+
+.content {
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
+}
+
+a {
+  text-decoration: none;
+  color: #bb86fc;
 }
