add listings container to game-show

--- a/src/app/components/games/game-show/game-show.component.html
+++ b/src/app/components/games/game-show/game-show.component.html
@@ -9,6 +9,6 @@
     <h1>{{ game.releaseDate | date: "MMMM d, y" }}</h1>
   </div>
   <div class="listings">
-    <app-listings-list></app-listings-list>
+    <app-listings-container></app-listings-container>
   </div>
 </div>
