added styling to game show

--- a/src/app/components/games/game-card/game-card.component.scss
+++ b/src/app/components/games/game-card/game-card.component.scss
@@ -1,6 +1,7 @@
 .game-card {
   width: 264px;
   height: 39em;
+  margin: auto;
   background-color: #1d1d1d;
   color: #858585;
   border-radius: 8px;
