create link to listing-new

--- a/src/app/components/games/game-show/game-show.component.html
+++ b/src/app/components/games/game-show/game-show.component.html
@@ -8,6 +8,9 @@
     <h1>{{ game.rating | number: "1.0-0" }}</h1>
     <h1>{{ game.releaseDate | date: "MMMM d, y" }}</h1>
   </div>
+  <a [routerLink]="['listing-new']" mat-raised-button class="list-game-button">
+    List game!
+  </a>
   <div class="listings">
     <app-listings-container></app-listings-container>
   </div>
