--- a/src/app/components/listings/listing-card/listing-card.component.scss
+++ b/src/app/components/listings/listing-card/listing-card.component.scss
@@ -34,9 +34,8 @@ mat-icon {
   color: #f5c518;
 }
 
-.rating,
-.console,
-.release-date {
+.listing-user,
+.status {
   display: flex;
   justify-content: space-between;
 }
