--- a/src/app/components/listings/listings-list/listings-list.component.scss
+++ b/src/app/components/listings/listings-list/listings-list.component.scss
@@ -13,4 +13,7 @@
   @media (min-width: 1200px) {
     grid-template-columns: repeat(4, 1fr);
   }
+  @media (min-width: 2000px) {
+    grid-template-columns: repeat(6, 1fr);
+  }
 }
