--- a/src/app/components/games/game-show/game-show.component.scss
+++ b/src/app/components/games/game-show/game-show.component.scss
@@ -1,7 +1,7 @@
 .container {
   margin: auto;
   width: 90%;
-  padding: 2em;
+  padding: 24px;
   color: #858585;
   border-radius: 4px;
 }
@@ -24,8 +24,8 @@
   height: 3em;
   font-size: 21px;
   width: 9em;
-  margin-bottom: 2em;
-  margin-top: 2em;
+  margin-bottom: 24px;
+  margin-top: 24px;
   background-color: #8fffc3;
   color: #232323;
   align-items: center;
