--- a/src/app/components/listings/listing-create/listing-create.component.scss
+++ b/src/app/components/listings/listing-create/listing-create.component.scss
@@ -2,24 +2,31 @@
   color: #858585;
 }
 
-.container {
-  padding: 15px;
+form {
+  display: flex;
+  flex-direction: column;
 }
 
 mat-card {
-  width: 20%;
+  width: 30%;
+  height: 130px;
+  background-color: #1f1f1f;
+  border-radius: 8px;
+}
+
+button {
+  height: 40px;
+  width: 75%;
   margin: auto;
+  margin-top: 32px;
   background-color: #1f1f1f;
 }
 
-mat-button {
-  width: 80%;
-  margin: auto;
-  margin-top: 2em;
-  background-color: #1f1f1f;
+input {
+  width: 90%;
 }
 
-hr {
-  margin-bottom: 20px;
-  margin-top: 20px;
+.container {
+  margin-bottom: 24px;
+  border-radius: 8px;
 }
