add a class name to button

--- a/src/app/components/listings/listing-create/listing-create.component.html
+++ b/src/app/components/listings/listing-create/listing-create.component.html
@@ -13,7 +13,12 @@
         />
         <mat-error *ngIf="title.invalid">Title is required</mat-error>
       </mat-form-field>
-      <button mat-raised-button color="accent" type="submit">
+      <button
+        mat-raised-button
+        color="accent"
+        class="create-listing-btn"
+        type="submit"
+      >
         Create Listing
       </button>
     </form>
