--- a/src/app/components/games/games-list/games-list.component.html
+++ b/src/app/components/games/games-list/games-list.component.html
@@ -1,8 +1,9 @@
 <div class="games-container">
-  <div class="grid-container" *ngIf="games.length > 0">
+  <mat-spinner color="accent" class="spinner" *ngIf="isLoading"></mat-spinner>
+  <div class="grid-container" *ngIf="games.length > 0 && !isLoading">
     <app-game-card *ngFor="let game of games" [game]="game"> </app-game-card>
   </div>
-  <h3 class="mat-body-1 info-text" *ngIf="games.length <= 0">
+  <h3 class="mat-body-1 info-text" *ngIf="games.length <= 0 && !isLoading">
     No games to display
   </h3>
 </div>
