--- a/src/app/components/listings/listing-create/listing-create.component.scss
+++ b/src/app/components/listings/listing-create/listing-create.component.scss
@@ -8,8 +8,8 @@ form {
 }
 
 mat-card {
-  width: 30%;
-  height: 220px;
+  width: 40%;
+  height: auto;
   padding: 24px;
   background-color: #1f1f1f;
   border-radius: 8px;
