add image picker to listing-create

--- a/src/app/components/listings/listing-create/listing-create.component.html
+++ b/src/app/components/listings/listing-create/listing-create.component.html
@@ -23,7 +23,10 @@
         >
           Pick Image
         </button>
-        <input type="file" #filePicker />
+        <input type="file" #filePicker (change)="onImagePicked($event)" />
+      </div>
+      <div class="image-preview" *ngIf="imagePreview">
+        <img [src]="imagePreview" [alt]="form.value.title" />
       </div>
       <hr />
       <button
