--- a/src/app/components/listings/listing-create/listing-create.component.html
+++ b/src/app/components/listings/listing-create/listing-create.component.html
@@ -4,15 +4,28 @@
       <mat-form-field>
         <input
           matInput
-          ngModel
           type="text"
           formControlName="title"
           placeholder="Listing Title"
         />
+        <mat-error *ngIf="form.get('title')?.invalid"
+          >Please enter a listing title</mat-error
+        >
       </mat-form-field>
-      <mat-error *ngIf="form.get('title')?.invalid"
-        >Please enter a listing title</mat-error
-      >
+      <div class="condition-select">
+        <mat-form-field appearance="fill">
+          <mat-label>Condition</mat-label>
+          <mat-select [(value)]="selected" formControlName="condition">
+            <mat-option value="brand-new">Brand new</mat-option>
+            <mat-option value="like-new">Like new</mat-option>
+            <mat-option value="good">Good</mat-option>
+            <mat-option value="acceptable">Acceptable</mat-option>
+          </mat-select>
+          <mat-error *ngIf="form.get('condition')?.invalid"
+            >Please select a condition</mat-error
+          >
+        </mat-form-field>
+      </div>
       <div>
         <button
           id="image-button"
@@ -25,7 +38,10 @@
         </button>
         <input type="file" #filePicker (change)="onImagePicked($event)" />
       </div>
-      <div class="image-preview" *ngIf="imagePreview">
+      <div
+        class="image-preview"
+        *ngIf="imagePreview && imagePreview !== '' && form.get('image')!.valid"
+      >
         <img [src]="imagePreview" [alt]="form.value.title" />
       </div>
       <hr />
