add material pagination module

--- a/src/app/components/games/games-list/games-list.component.html
+++ b/src/app/components/games/games-list/games-list.component.html
@@ -3,6 +3,14 @@
   <div class="grid-container" *ngIf="games.length > 0 && !isLoading">
     <app-game-card *ngFor="let game of games" [game]="game"> </app-game-card>
   </div>
+
+  <mat-paginator
+    [length]="totalGames"
+    [pageSize]="gamesPerPage"
+    [pageSizeOptions]="pageSizeOptions"
+    (page)="onChangedPage($event)"
+  ></mat-paginator>
+
   <h3 class="mat-body-1 info-text" *ngIf="games.length <= 0 && !isLoading">
     No games to display
   </h3>
