--- a/src/app/components/games/game-show/game-show.component.scss
+++ b/src/app/components/games/game-show/game-show.component.scss
@@ -1,3 +1,9 @@
+mat-spinner {
+  margin: auto;
+  margin-top: 3rem;
+  color: #8fffc3;
+}
+
 .container {
   margin: auto;
   width: 90%;
@@ -29,4 +35,9 @@
   background-color: #8fffc3;
   color: #232323;
   align-items: center;
+}
+
+.game-cover {
+  margin-bottom: 1rem;
+  text-align: center;
 }
