make console selection sticky top

--- a/src/app/components/games/games-list/games-list.component.html
+++ b/src/app/components/games/games-list/games-list.component.html
@@ -1,5 +1,9 @@
 <div class="games-container">
-  <mat-tab-group #tabRef (selectedTabChange)="onConsoleSelect($event)">
+  <mat-tab-group
+    id="tab-group"
+    #tabRef
+    (selectedTabChange)="onConsoleSelect($event)"
+  >
     <mat-tab
       *ngFor="let console of gameConsoles"
       label="{{ console }}"
