add sign up form and styling

--- a/src/app/components/auth/signup/signup.component.html
+++ b/src/app/components/auth/signup/signup.component.html
@@ -1,1 +1,75 @@
-<p>signup works!</p>
+<div class="container">
+  <mat-spinner *ngIf="isLoading"></mat-spinner>
+  <mat-card *ngIf="!isLoading">
+    <form #signupForm="ngForm" (submit)="onSignup(signupForm)">
+      <mat-form-field>
+        <input
+          name="firstName"
+          ngModel
+          #firstNameInput="ngModel"
+          matInput
+          type="firstName"
+          placeholder="First Name"
+          required
+          firstName
+        />
+        <mat-error *ngIf="firstNameInput.invalid"
+          >Please enter a valid first name</mat-error
+        >
+      </mat-form-field>
+      <mat-form-field>
+        <input
+          name="lastName"
+          ngModel
+          #lastNameInput="ngModel"
+          matInput
+          type="lastName"
+          placeholder="Last Name"
+          required
+          lastName
+        />
+        <mat-error *ngIf="lastNameInput.invalid"
+          >Please enter a valid last name</mat-error
+        >
+      </mat-form-field>
+      <mat-form-field>
+        <input
+          name="email"
+          ngModel
+          #emailInput="ngModel"
+          matInput
+          type="email"
+          placeholder="E-Mail address"
+          required
+          email
+        />
+        <mat-error *ngIf="emailInput.invalid"
+          >Please enter a valid email</mat-error
+        >
+      </mat-form-field>
+      <mat-form-field>
+        <input
+          name="password"
+          ngModel
+          #passwordInput="ngModel"
+          matInput
+          type="password"
+          placeholder="Password"
+          required
+        />
+        <mat-error *ngIf="passwordInput.invalid"
+          >Please enter password</mat-error
+        >
+      </mat-form-field>
+      <button
+        id="login-button"
+        mat-raised-button
+        color="accent"
+        class="login-btn"
+        type="submit"
+      >
+        Sign Up
+      </button>
+    </form>
+  </mat-card>
+</div>
