--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -4,7 +4,7 @@
       <a routerLink="/"> Listings</a>
     </div>
     <div class="auth">
-      <a mat-button routerLink="/login" routerLinkActive="mat-accent"
+      <a mat-button routerLink="/sign-up" routerLinkActive="mat-accent"
         >Sign up</a
       >
       <a mat-button routerLink="/login" routerLinkActive="mat-accent">Login</a>
