--- a/src/app/components/games/game-show/game-show.component.scss
+++ b/src/app/components/games/game-show/game-show.component.scss
@@ -21,6 +21,7 @@ mat-spinner {
 
 .listings {
   margin: auto;
+  margin-top: 2rem;
 }
 
 .list-game-button {
@@ -30,8 +31,7 @@ mat-spinner {
   height: 3em;
   font-size: 21px;
   width: 9em;
-  margin-bottom: 24px;
-  margin-top: 24px;
+  margin-top: 2rem;
   background-color: #8fffc3;
   color: #232323;
   align-items: center;
