add loading spinner to sign up component

--- a/src/app/components/auth/signup/signup.component.html
+++ b/src/app/components/auth/signup/signup.component.html
@@ -67,6 +67,7 @@
         color="accent"
         class="login-btn"
         type="submit"
+        *ngIf="!isLoading"
       >
         Sign Up
       </button>
