add loading spinner to login component

--- a/src/app/components/auth/login/login.component.html
+++ b/src/app/components/auth/login/login.component.html
@@ -37,6 +37,7 @@
         color="accent"
         class="login-btn"
         type="submit"
+        *ngIf="!isLoading"
       >
         Login
       </button>
