--- a/src/app/components/listings/listing-create/listing-create.component.scss
+++ b/src/app/components/listings/listing-create/listing-create.component.scss
@@ -38,7 +38,8 @@ input[type="file"] {
 }
 
 .container {
-  margin-bottom: 24px;
+  margin-bottom: 2rem;
+  margin-top: 2rem;
   border-radius: 8px;
 }
 
