--- a/src/styles.scss
+++ b/src/styles.scss
@@ -27,3 +27,8 @@ body {
 body {
   font-family: Roboto, "Helvetica Neue", sans-serif;
 }
+
+.grey-snackbar {
+  background-color: #1d1d1d;
+  color: #bb86fc;
+}
