--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -7,14 +7,14 @@
       <a
         *ngIf="!userIsAuthenticated"
         mat-button
-        routerLink="/sign-up"
+        routerLink="auth/sign-up"
         routerLinkActive="mat-accent"
         >Sign up</a
       >
       <a
         *ngIf="!userIsAuthenticated"
         mat-button
-        routerLink="/login"
+        routerLink="auth/login"
         routerLinkActive="mat-accent"
         >Login</a
       >
