--- a/src/app/components/games/game-show/game-show.component.html
+++ b/src/app/components/games/game-show/game-show.component.html
@@ -9,20 +9,22 @@
     <h3>{{ game?.rating | number: "1.0-0" }}</h3>
     <h3>{{ game?.releaseDate | date: "MMMM d, y" }}</h3>
   </div>
-  <a
-    *ngIf="userIsAuthenticated"
-    (click)="toggle()"
-    mat-raised-button
-    class="list-game-button"
-  >
-    List game!
-  </a>
+  <div class="listing-content">
+    <a
+      *ngIf="userIsAuthenticated"
+      (click)="toggle()"
+      mat-raised-button
+      class="list-game-button"
+    >
+      List game!
+    </a>
 
-  <div [@popOverState]="stateName" id="list-create-render" *ngIf="display">
-    <app-listing-create [game]="game"></app-listing-create>
-  </div>
+    <div [@popOverState]="stateName" id="list-create-render" *ngIf="display">
+      <app-listing-create [game]="game"></app-listing-create>
+    </div>
 
-  <div class="listings">
-    <app-listings-container></app-listings-container>
+    <div class="listings">
+      <app-listings-container></app-listings-container>
+    </div>
   </div>
 </div>
