--- a/src/app/components/listings/listings-list/listings-list.component.scss
+++ b/src/app/components/listings/listings-list/listings-list.component.scss
@@ -2,8 +2,9 @@
   margin: 0 auto;
   display: grid;
   grid-gap: 1.3em;
-  grid-template-columns: repeat(4, 2fr);
+  grid-template-columns: repeat(3, 3fr);
   grid-template-rows: 1fr;
+  margin-right: 1.3em;
   @media (min-width: 100px) and (max-width: 500px) {
     grid-template-columns: repeat(1, 1fr);
   }
@@ -11,9 +12,36 @@
     grid-template-columns: repeat(3, 1fr);
   }
   @media (min-width: 1200px) {
-    grid-template-columns: repeat(4, 1fr);
+    grid-template-columns: repeat(3, 1fr);
   }
   @media (min-width: 2000px) {
     grid-template-columns: repeat(6, 1fr);
   }
+}
+
+.listings-container {
+  height: 650px;
+  overflow-y: scroll;
+}
+
+/* width */
+::-webkit-scrollbar {
+  width: 6px;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+  box-shadow: inset 0 0 5px grey;
+  border-radius: 10px;
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+  background: #8fffc3;
+  border-radius: 10px;
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+  background: #1d1d1d;
 }
