--- a/src/app/components/games/game-show/game-show.component.scss
+++ b/src/app/components/games/game-show/game-show.component.scss
@@ -6,7 +6,6 @@ mat-spinner {
 
 .container {
   margin: 2rem;
-  padding: 24px;
   color: #858585;
   border-radius: 4px;
   display: flex;
@@ -20,6 +19,7 @@ mat-spinner {
 .game-details {
   background-color: #1d1d1d;
   padding: 2em;
+  margin-top: 1rem;
   width: 60%;
   border-radius: 4px;
   margin-right: 2rem;
@@ -31,7 +31,6 @@ mat-spinner {
 
 .listing-content {
   width: 100%;
-  margin-left: 1rem;
   @media (min-width: 100px) and (max-width: 500px) {
     width: auto;
     margin: 0;
