fix positioning of list game button

--- a/src/app/components/games/game-show/game-show.component.scss
+++ b/src/app/components/games/game-show/game-show.component.scss
@@ -51,7 +51,8 @@ mat-spinner {
   background-color: #8fffc3;
   color: #232323;
   align-items: center;
-  margin-bottom: 2rem;
+  margin-left: 1rem;
+  margin-top: 1rem;
   @media (min-width: 100px) and (max-width: 500px) {
     margin: auto;
     margin-top: 2rem;
