--- a/src/app/components/listings/listing-create/listing-create.component.scss
+++ b/src/app/components/listings/listing-create/listing-create.component.scss
@@ -13,6 +13,7 @@ mat-card {
   padding: 24px;
   background-color: #1f1f1f;
   border-radius: 8px;
+  margin-left: 1rem;
 }
 
 mat-form-field {
@@ -38,8 +39,8 @@ input[type="file"] {
 }
 
 .container {
-  margin-bottom: 2rem;
-  margin-top: 2rem;
+  margin-bottom: 1rem;
+  margin-top: 1.8rem;
   border-radius: 8px;
   @media (min-width: 100px) and (max-width: 500px) {
     display: flex;
