change listings header to "Games"

--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,7 +1,7 @@
 <mat-toolbar>
   <div class="content">
     <div class="home">
-      <a routerLink="/"> Listings</a>
+      <a routerLink="/">Games</a>
     </div>
     <div class="auth">
       <a
