--- a/src/app/components/games/games-list/games-list.component.html
+++ b/src/app/components/games/games-list/games-list.component.html
@@ -25,6 +25,11 @@
       [pageSizeOptions]="pageSizeOptions"
       (page)="onChangedPage($event)"
     ></mat-paginator>
+    <mat-form-field appearance="fill">
+      <mat-label>Search</mat-label>
+      <mat-icon matPrefix>search</mat-icon>
+      <input (keyup)="searchGames($event)" matInput value="" />
+    </mat-form-field>
   </div>
 
   <mat-spinner color="accent" class="spinner" *ngIf="isLoading"></mat-spinner>
