--- a/src/app/components/games/games-list/games-list.component.html
+++ b/src/app/components/games/games-list/games-list.component.html
@@ -25,11 +25,20 @@
       [pageSizeOptions]="pageSizeOptions"
       (page)="onChangedPage($event)"
     ></mat-paginator>
-    <mat-form-field appearance="fill">
-      <mat-label>Search</mat-label>
-      <mat-icon matPrefix>search</mat-icon>
-      <input (keyup)="searchGames($event)" matInput value="" />
-    </mat-form-field>
+    <form #searchForm="ngForm">
+      <mat-form-field appearance="fill">
+        <mat-label>Search</mat-label>
+        <mat-icon matPrefix>search</mat-icon>
+        <input
+          name="search"
+          ngModel
+          #search="ngModel"
+          (keyup)="searchGames(searchForm)"
+          matInput
+          value=""
+        />
+      </mat-form-field>
+    </form>
   </div>
 
   <mat-spinner color="accent" class="spinner" *ngIf="isLoading"></mat-spinner>
